# Internet-of-Things-Smart-DIY-Assistant

./: README.mkd
ProjectThing/: CMakeLists.txt  sdkconfig
ProjectThing/main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c
ProjectThing/main/app/: app_net.c  app_net.h  audio_manager.c  audio_manager.h  client_connections.c  client_connections.h  sr_main.c  sr_main.h
ProjectThing/main/gui/: ui_aboutus.c  ui_aboutus.h  ui_assistant.c  ui_assistant.h  ui_conversation.c  ui_conversation.h  ui_main.c  ui_main.h  ui_wifi.c  ui_wifi.h
ProjectThing/main/gui/image/: cloud_connected.c  cloud_connected.h  cloud_not_connected.c  cloud_not_connected.h  info.c  info.h  mic_logo.h  no_wifi_icon.c  no_wifi_icon.h  volume_off.c  volume_off.h  volume_on.c  volume_on.h  wifi_icon.c  wifi_icon.h
esp-box/examples/esp_joystick/joystick_controller/main/app/: esp_hid_gap.c  esp_hid_gap.h
esp-box/examples/factory_demo/: CMakeLists.txt  sdkconfig
esp-box/hardware/esp32_s3_box_dock_v1.0/pcb/: PCB_ESP32-S3-BOX-DOCK_V1D0_20210922.asc
esp-box/hardware/esp32_s3_box_dock_v1.0/placement/: Placement_20210922.html
esp-box/hardware/esp32_s3_box_sub_v2.2/pcb/: ESP32-S3-BOX_SUB_V2.2_20210909.asc
esp-box/hardware/esp32_s3_box_v2.5/pcb/: PCB_ESP32-S3-BOX_V2.4_20210916.asc
